Project/Grammar/MoMParser.py
# Generated from Grammar/MoM.g4 by ANTLR 4.5.3
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class MoMParser ( Parser ):

    grammarFileName = "MoM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"','", u"')'", u"'{'", u"'}'", 
                     u"';'", u"'*'", u"'/'", u"'+'", u"'-'", u"'='", u"'_'", 
                     u"'.'", u"'!'", u"'!='", u"'<'", u"'<='", u"'>'", u"'>='", 
                     u"'=='", u"'&&'", u"'||'", u"'this'", u"'if'", u"'else'", 
                     u"'Array'", u"'Component'", u"'Int'", u"'Text'", u"'Real'", 
                     u"'Set'", u"'Map'", u"'Size'", u"'Nothing'", u"'class'", 
                     u"'new'", u"'enumerate'", u"'field'", u"'specification'", 
                     u"'return'", u"'boolean'", u"'type'", u"'of_type'", 
                     u"'is_a'", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"' '", u"<INVALID>", u"'while'" ]

    symbolicNames = [ u"<INVALID>", u"OPEN_PAREN", u"COMMA", u"CLOSE_PAREN", 
                      u"OPEN_BRACKET", u"CLOSE_BRACKET", u"SEMI_COLON", 
                      u"STAR", u"SLASH", u"PLUS", u"MINUS", u"EQUALS", u"UNDERSCORE", 
                      u"PERIOD", u"NOT", u"NOT_EQUALS", u"LESS_THAN", u"LESS_EQUAL", 
                      u"GREATER_THAN", u"GREATER_EQUAL", u"EQUAL_EQUAL", 
                      u"AND", u"OR", u"THIS", u"IF", u"ELSE", u"ARRAY", 
                      u"COMPONENT", u"INT", u"TEXT", u"FLOAT", u"SET", u"MAP", 
                      u"SIZE", u"NOTHING", u"CLASS", u"NEW", u"ENUMERATE", 
                      u"FIELD", u"SPEC", u"RETURN", u"BOOLEAN", u"TYPE", 
                      u"OF_TYPE", u"IS_A", u"CAPITALID", u"CLASSID", u"VARID", 
                      u"INTEGER", u"REAL", u"WHITESPACE", u"STRING", u"WHILE", 
                      u"WS" ]

    RULE_program = 0
    RULE_arguments = 1
    RULE_assignation = 2
    RULE_block = 3
    RULE_class_rule = 4
    RULE_condition = 5
    RULE_constant = 6
    RULE_construct_call = 7
    RULE_construct_def = 8
    RULE_enum = 9
    RULE_enumeration = 10
    RULE_ss_exp = 11
    RULE_s_exp = 12
    RULE_expression = 13
    RULE_factor = 14
    RULE_function_args = 15
    RULE_function_call = 16
    RULE_function_def = 17
    RULE_operand = 18
    RULE_field = 19
    RULE_spec_function = 20
    RULE_specification = 21
    RULE_statute = 22
    RULE_term = 23
    RULE_super_type = 24
    RULE_simple_type = 25
    RULE_complex_type = 26
    RULE_while_loop = 27

    ruleNames =  [ u"program", u"arguments", u"assignation", u"block", u"class_rule", 
                   u"condition", u"constant", u"construct_call", u"construct_def", 
                   u"enum", u"enumeration", u"ss_exp", u"s_exp", u"expression", 
                   u"factor", u"function_args", u"function_call", u"function_def", 
                   u"operand", u"field", u"spec_function", u"specification", 
                   u"statute", u"term", u"super_type", u"simple_type", u"complex_type", 
                   u"while_loop" ]

    EOF = Token.EOF
    OPEN_PAREN=1
    COMMA=2
    CLOSE_PAREN=3
    OPEN_BRACKET=4
    CLOSE_BRACKET=5
    SEMI_COLON=6
    STAR=7
    SLASH=8
    PLUS=9
    MINUS=10
    EQUALS=11
    UNDERSCORE=12
    PERIOD=13
    NOT=14
    NOT_EQUALS=15
    LESS_THAN=16
    LESS_EQUAL=17
    GREATER_THAN=18
    GREATER_EQUAL=19
    EQUAL_EQUAL=20
    AND=21
    OR=22
    THIS=23
    IF=24
    ELSE=25
    ARRAY=26
    COMPONENT=27
    INT=28
    TEXT=29
    FLOAT=30
    SET=31
    MAP=32
    SIZE=33
    NOTHING=34
    CLASS=35
    NEW=36
    ENUMERATE=37
    FIELD=38
    SPEC=39
    RETURN=40
    BOOLEAN=41
    TYPE=42
    OF_TYPE=43
    IS_A=44
    CAPITALID=45
    CLASSID=46
    VARID=47
    INTEGER=48
    REAL=49
    WHITESPACE=50
    STRING=51
    WHILE=52
    WS=53

    def __init__(self, input):
        super(MoMParser, self).__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.ProgramContext, self).__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MoMParser.EOF, 0)

        def class_rule(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MoMParser.Class_ruleContext)
            else:
                return self.getTypedRuleContext(MoMParser.Class_ruleContext,i)


        def getRuleIndex(self):
            return MoMParser.RULE_program

        def enterRule(self, listener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)




    def program(self):

        localctx = MoMParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self.class_rule()
                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MoMParser.CLASS):
                    break

            self.state = 61
            self.match(MoMParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.ArgumentsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ss_exp(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MoMParser.Ss_expContext)
            else:
                return self.getTypedRuleContext(MoMParser.Ss_expContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.COMMA)
            else:
                return self.getToken(MoMParser.COMMA, i)

        def getRuleIndex(self):
            return MoMParser.RULE_arguments

        def enterRule(self, listener):
            if hasattr(listener, "enterArguments"):
                listener.enterArguments(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArguments"):
                listener.exitArguments(self)




    def arguments(self):

        localctx = MoMParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.ss_exp()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MoMParser.COMMA:
                self.state = 64
                self.match(MoMParser.COMMA)
                self.state = 65
                self.ss_exp()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.AssignationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARID(self):
            return self.getToken(MoMParser.VARID, 0)

        def EQUALS(self):
            return self.getToken(MoMParser.EQUALS, 0)

        def construct_call(self):
            return self.getTypedRuleContext(MoMParser.Construct_callContext,0)


        def ss_exp(self):
            return self.getTypedRuleContext(MoMParser.Ss_expContext,0)


        def getRuleIndex(self):
            return MoMParser.RULE_assignation

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignation"):
                listener.enterAssignation(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignation"):
                listener.exitAssignation(self)




    def assignation(self):

        localctx = MoMParser.AssignationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MoMParser.VARID)
            self.state = 72
            self.match(MoMParser.EQUALS)
            self.state = 75
            token = self._input.LA(1)
            if token in [MoMParser.NEW]:
                self.state = 73
                self.construct_call()

            elif token in [MoMParser.OPEN_BRACKET, MoMParser.PLUS, MoMParser.MINUS, MoMParser.NOT, MoMParser.THIS, MoMParser.CLASSID, MoMParser.VARID, MoMParser.INTEGER, MoMParser.REAL, MoMParser.STRING]:
                self.state = 74
                self.ss_exp()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.BlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statute(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MoMParser.StatuteContext)
            else:
                return self.getTypedRuleContext(MoMParser.StatuteContext,i)


        def SEMI_COLON(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.SEMI_COLON)
            else:
                return self.getToken(MoMParser.SEMI_COLON, i)

        def getRuleIndex(self):
            return MoMParser.RULE_block

        def enterRule(self, listener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)




    def block(self):

        localctx = MoMParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MoMParser.IF) | (1 << MoMParser.VARID) | (1 << MoMParser.WHILE))) != 0):
                self.state = 77
                self.statute()
                self.state = 78
                self.match(MoMParser.SEMI_COLON)
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Class_ruleContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.Class_ruleContext, self).__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(MoMParser.CLASS, 0)

        def CLASSID(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.CLASSID)
            else:
                return self.getToken(MoMParser.CLASSID, i)

        def IS_A(self):
            return self.getToken(MoMParser.IS_A, 0)

        def complex_type(self):
            return self.getTypedRuleContext(MoMParser.Complex_typeContext,0)


        def OPEN_BRACKET(self):
            return self.getToken(MoMParser.OPEN_BRACKET, 0)

        def field(self):
            return self.getTypedRuleContext(MoMParser.FieldContext,0)


        def construct_def(self):
            return self.getTypedRuleContext(MoMParser.Construct_defContext,0)


        def function_def(self):
            return self.getTypedRuleContext(MoMParser.Function_defContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(MoMParser.CLOSE_BRACKET, 0)

        def OF_TYPE(self):
            return self.getToken(MoMParser.OF_TYPE, 0)

        def getRuleIndex(self):
            return MoMParser.RULE_class_rule

        def enterRule(self, listener):
            if hasattr(listener, "enterClass_rule"):
                listener.enterClass_rule(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitClass_rule"):
                listener.exitClass_rule(self)




    def class_rule(self):

        localctx = MoMParser.Class_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(MoMParser.CLASS)
            self.state = 86
            self.match(MoMParser.CLASSID)
            self.state = 87
            self.match(MoMParser.IS_A)
            self.state = 88
            self.complex_type()
            self.state = 91
            _la = self._input.LA(1)
            if _la==MoMParser.OF_TYPE:
                self.state = 89
                self.match(MoMParser.OF_TYPE)
                self.state = 90
                self.match(MoMParser.CLASSID)


            self.state = 93
            self.match(MoMParser.OPEN_BRACKET)
            self.state = 94
            self.field()
            self.state = 95
            self.construct_def()
            self.state = 96
            self.function_def()
            self.state = 97
            self.match(MoMParser.CLOSE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.ConditionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MoMParser.IF, 0)

        def OPEN_PAREN(self):
            return self.getToken(MoMParser.OPEN_PAREN, 0)

        def ss_exp(self):
            return self.getTypedRuleContext(MoMParser.Ss_expContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(MoMParser.CLOSE_PAREN, 0)

        def OPEN_BRACKET(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.OPEN_BRACKET)
            else:
                return self.getToken(MoMParser.OPEN_BRACKET, i)

        def block(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MoMParser.BlockContext)
            else:
                return self.getTypedRuleContext(MoMParser.BlockContext,i)


        def CLOSE_BRACKET(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.CLOSE_BRACKET)
            else:
                return self.getToken(MoMParser.CLOSE_BRACKET, i)

        def ELSE(self):
            return self.getToken(MoMParser.ELSE, 0)

        def getRuleIndex(self):
            return MoMParser.RULE_condition

        def enterRule(self, listener):
            if hasattr(listener, "enterCondition"):
                listener.enterCondition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCondition"):
                listener.exitCondition(self)




    def condition(self):

        localctx = MoMParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(MoMParser.IF)
            self.state = 100
            self.match(MoMParser.OPEN_PAREN)
            self.state = 101
            self.ss_exp()
            self.state = 102
            self.match(MoMParser.CLOSE_PAREN)
            self.state = 103
            self.match(MoMParser.OPEN_BRACKET)
            self.state = 104
            self.block()
            self.state = 105
            self.match(MoMParser.CLOSE_BRACKET)
            self.state = 111
            _la = self._input.LA(1)
            if _la==MoMParser.ELSE:
                self.state = 106
                self.match(MoMParser.ELSE)
                self.state = 107
                self.match(MoMParser.OPEN_BRACKET)
                self.state = 108
                self.block()
                self.state = 109
                self.match(MoMParser.CLOSE_BRACKET)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.ConstantContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MoMParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MoMParser.REAL, 0)

        def STRING(self):
            return self.getToken(MoMParser.STRING, 0)

        def VARID(self):
            return self.getToken(MoMParser.VARID, 0)

        def getRuleIndex(self):
            return MoMParser.RULE_constant

        def enterRule(self, listener):
            if hasattr(listener, "enterConstant"):
                listener.enterConstant(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConstant"):
                listener.exitConstant(self)




    def constant(self):

        localctx = MoMParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constant)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MoMParser.VARID) | (1 << MoMParser.INTEGER) | (1 << MoMParser.REAL) | (1 << MoMParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Construct_callContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.Construct_callContext, self).__init__(parent, invokingState)
            self.parser = parser

        def NEW(self):
            return self.getToken(MoMParser.NEW, 0)

        def CLASSID(self):
            return self.getToken(MoMParser.CLASSID, 0)

        def OPEN_PAREN(self):
            return self.getToken(MoMParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(MoMParser.CLOSE_PAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(MoMParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return MoMParser.RULE_construct_call

        def enterRule(self, listener):
            if hasattr(listener, "enterConstruct_call"):
                listener.enterConstruct_call(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConstruct_call"):
                listener.exitConstruct_call(self)




    def construct_call(self):

        localctx = MoMParser.Construct_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_construct_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(MoMParser.NEW)
            self.state = 116
            self.match(MoMParser.CLASSID)
            self.state = 117
            self.match(MoMParser.OPEN_PAREN)
            self.state = 119
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MoMParser.OPEN_BRACKET) | (1 << MoMParser.PLUS) | (1 << MoMParser.MINUS) | (1 << MoMParser.NOT) | (1 << MoMParser.THIS) | (1 << MoMParser.CLASSID) | (1 << MoMParser.VARID) | (1 << MoMParser.INTEGER) | (1 << MoMParser.REAL) | (1 << MoMParser.STRING))) != 0):
                self.state = 118
                self.arguments()


            self.state = 121
            self.match(MoMParser.CLOSE_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Construct_defContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.Construct_defContext, self).__init__(parent, invokingState)
            self.parser = parser

        def CLASSID(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.CLASSID)
            else:
                return self.getToken(MoMParser.CLASSID, i)

        def OPEN_PAREN(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.OPEN_PAREN)
            else:
                return self.getToken(MoMParser.OPEN_PAREN, i)

        def CLOSE_PAREN(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.CLOSE_PAREN)
            else:
                return self.getToken(MoMParser.CLOSE_PAREN, i)

        def OPEN_BRACKET(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.OPEN_BRACKET)
            else:
                return self.getToken(MoMParser.OPEN_BRACKET, i)

        def block(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MoMParser.BlockContext)
            else:
                return self.getTypedRuleContext(MoMParser.BlockContext,i)


        def CLOSE_BRACKET(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.CLOSE_BRACKET)
            else:
                return self.getToken(MoMParser.CLOSE_BRACKET, i)

        def SEMI_COLON(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.SEMI_COLON)
            else:
                return self.getToken(MoMParser.SEMI_COLON, i)

        def arguments(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MoMParser.ArgumentsContext)
            else:
                return self.getTypedRuleContext(MoMParser.ArgumentsContext,i)


        def getRuleIndex(self):
            return MoMParser.RULE_construct_def

        def enterRule(self, listener):
            if hasattr(listener, "enterConstruct_def"):
                listener.enterConstruct_def(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitConstruct_def"):
                listener.exitConstruct_def(self)




    def construct_def(self):

        localctx = MoMParser.Construct_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_construct_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 123
                self.match(MoMParser.CLASSID)
                self.state = 124
                self.match(MoMParser.OPEN_PAREN)
                self.state = 126
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MoMParser.OPEN_BRACKET) | (1 << MoMParser.PLUS) | (1 << MoMParser.MINUS) | (1 << MoMParser.NOT) | (1 << MoMParser.THIS) | (1 << MoMParser.CLASSID) | (1 << MoMParser.VARID) | (1 << MoMParser.INTEGER) | (1 << MoMParser.REAL) | (1 << MoMParser.STRING))) != 0):
                    self.state = 125
                    self.arguments()


                self.state = 128
                self.match(MoMParser.CLOSE_PAREN)
                self.state = 129
                self.match(MoMParser.OPEN_BRACKET)
                self.state = 130
                self.block()
                self.state = 131
                self.match(MoMParser.CLOSE_BRACKET)
                self.state = 132
                self.match(MoMParser.SEMI_COLON)
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MoMParser.CLASSID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.EnumContext, self).__init__(parent, invokingState)
            self.parser = parser

        def CAPITALID(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.CAPITALID)
            else:
                return self.getToken(MoMParser.CAPITALID, i)

        def SEMI_COLON(self):
            return self.getToken(MoMParser.SEMI_COLON, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.COMMA)
            else:
                return self.getToken(MoMParser.COMMA, i)

        def getRuleIndex(self):
            return MoMParser.RULE_enum

        def enterRule(self, listener):
            if hasattr(listener, "enterEnum"):
                listener.enterEnum(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEnum"):
                listener.exitEnum(self)




    def enum(self):

        localctx = MoMParser.EnumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_enum)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MoMParser.CAPITALID)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MoMParser.COMMA:
                self.state = 139
                self.match(MoMParser.COMMA)
                self.state = 140
                self.match(MoMParser.CAPITALID)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self.match(MoMParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumerationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.EnumerationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ENUMERATE(self):
            return self.getToken(MoMParser.ENUMERATE, 0)

        def CLASSID(self):
            return self.getToken(MoMParser.CLASSID, 0)

        def OPEN_BRACKET(self):
            return self.getToken(MoMParser.OPEN_BRACKET, 0)

        def enum(self):
            return self.getTypedRuleContext(MoMParser.EnumContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(MoMParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return MoMParser.RULE_enumeration

        def enterRule(self, listener):
            if hasattr(listener, "enterEnumeration"):
                listener.enterEnumeration(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEnumeration"):
                listener.exitEnumeration(self)




    def enumeration(self):

        localctx = MoMParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_enumeration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(MoMParser.ENUMERATE)
            self.state = 149
            self.match(MoMParser.CLASSID)
            self.state = 150
            self.match(MoMParser.OPEN_BRACKET)
            self.state = 151
            self.enum()
            self.state = 152
            self.match(MoMParser.CLOSE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ss_expContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(MoMParser.Ss_expContext, self).__init__(parent, invokingState)
            self.parser = parser

        def s_exp(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(MoMParser.S_expContext)
            else:
                return self.getTypedRuleContext(MoMParser.S_expContext,i)


        def AND(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.AND)
            else:
                return self.getToken(MoMParser.AND, i)

        def OR(self, i=None):
            if i is None:
                return self.getTokens(MoMParser.OR)
            else:
                return self.getToken(MoMParser.OR, i)

        def getRuleIndex(self):
            return MoMParser.RULE_ss_exp

        def enterRule(self, listener):
            if hasattr(listener, "enterSs_exp"):
                listener.enterSs_exp(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSs_exp"):
                listener.exitSs_exp(self)




    def ss_exp(self):
